# FlightController-pico

./: .gitignore  CMakeLists.txt  FlightController.c  FlightController.cpp  README.md  makefile  mpu.cpp
FlightControllerHardware/: FlightControllerHardware.kicad_pcb  FlightControllerHardware.kicad_pro  FlightControllerHardware.kicad_sch
src/: CMakeLists.txt  imu.hpp  motor.hpp  mpu6050.cpp  mpu6050.hpp  pid.hpp  setup.hpp  utils.hpp
